htdocs/src/win_showhistogram.css
.container {
	fill: white;
}

.chart {
	font: 10px sans-serif;
}

.bar rect {
	fill: steelblue;
	shape-rendering: crispEdges;
}

.bar text {
	fill: #fff;
}

.axis path,.axis line {
	fill: none;
	stroke: #000;
	shape-rendering: crispEdges;
}

